# twitch-follow-bot

./: .gitignore  README.md  pyproject.toml
src/twitch_follow_bot/: followbot.py  services.py
